# mcp-yieldshell

./: .gitignore  AGENTS.md  README.md  cybervisor.yaml  pyproject.toml
.github/workflows/: publish.yml
scripts/: release.py
src/mcp_yieldshell/: config.py  server.py  types.py
src/mcp_yieldshell/process/: manager.py  ring_buffer.py
tests/: test_config.py  test_integration.py  test_release.py  test_ring_buffer.py  test_side_effects.py
